# Focacciat

./: README.md
.github/workflows/: cmake-single-platform.yml
docs/: README.md  extension_development.md
src/: CMakeLists.txt  DebugTodoView.qml  DebugView.qml  Main.qml  TimerCircle.qml  TodoList.qml  TodoView.qml  extensionconnection.cpp  extensionconnection.h  extensionintegration.cpp  extensionintegration.h  extensionmanifest.json  focustimer.cpp  focustimer.h  formatutils.cpp  formatutils.h  globalstate.cpp  globalstate.h  main.cpp  maskedapplicationwindow.cpp  maskedapplicationwindow.h  projectitem.cpp  projectitem.h  projectmodel.cpp  projectmodel.h  projectprogressitem.cpp  projectprogressitem.h  projectprogressmodel.cpp  projectprogressmodel.h  todoitem.cpp  todoitem.h  todolist.cpp  todolist.h  todomodel.cpp  todomodel.h
src/assets/icons/: focacciat-icon.icns  svg2icns.bash  svg2ico.sh
src/blockers/: BlocklistPopup.qml  blocklist.cpp  blocklist.h  blocklistlistmodel.cpp  blocklistlistmodel.h  blocklistmanager.cpp  blocklistmanager.h  extensionclient.cpp  extensionclient.h  extensionintegration.cpp  extensionintegration.h
src/components/: FlatButton.qml  TimeInput.qml  abstracttimeinput.cpp  abstracttimeinput.h  timeinput.cpp  timeinput.h
src/extensionhost/: CMakeLists.txt  main_mac.cpp  main_unix.cpp  main_win.cpp  testserver.cpp
src/settings/: BlocklistPopup.qml
